<resources>
    <string name="app_name">SpazaAdmin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="api_key">AIzaSyByGbOpU-UNmrpSa5ZMRjp_sbFnLZo5eM0</string>
    <string name="action_settings">Settings</string>
    <string name="home_spaza_names_heading">All local Spazas</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="text_please_wait">Please wait..</string>
    <string name="input_email">Email Address</string>
    <string name="input_password">Password</string>
    <string name="input_password_confirm">Password</string>
    <string name="input_name">Business Name</string>
    <string name="input_description">Business Description</string>
    <string name="input_phone_number">Your Business Phone number</string>
    <string name="text_view_forgort_password">Forgot Password</string>
    <string name="button_accept">Accept</string>
    <string name="text_open">Open</string>
    <string name="text_close">Close</string>
    <string name="text_monday_friday">Monday - Friday</string>
    <string name="text_saterday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_address">Address</string>
    <string name="text_update">Update</string>
    <string name="shop_icon">Shop Logo</string>
    <string name="button_continue">Continue</string>
    <string name="btn_add_menu">Add menu</string>
    <string name="text_menu_tittle">Add a menu to your inventory for customers to make their orders</string>
    <string name="add_ons">Additional info: </string>
    <string name="product_name">Item Name </string>
    <string name="product_price">Item Price </string>
    <string name="shop_status">Go Online </string>
    <string name="welcome_text">Hello there, welcome back</string>
    <string name="sign_in_text">Sign In to continue</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="forget_password_text">Forget Password ?</string>
    <string name="new_user_sign_up_text">New User? Sign UP</string>
    <string name="sign_up_welcome_text">Welcome</string>
    <string name="sign_up_encourage_text">Please Sign Up To continue</string>
    <string name="full_name_text">Full Name</string>
    <string name="welcome_splash_text">Kota Palace</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="have_account_already_text">Already have an account? Login</string>
    <string name="enter_extra_menu_items_text">Enter extra menu items</string>
    <string name="email_text">Email</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>

    <string name="alert_title">Delete menu</string>
    <string name="alert_message">Are you sure want to delete the menu?</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>

    <string name="orders_toolbar_title">Orders</string>
    <string name="dismiss_text">dismiss</string>
    <string name="delete_text">delete</string>
    <string name="update_text">update</string>
</resources>