<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.SignUpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_appBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/sign_up_toobar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UselessParent"
        android:layout_below="@id/sign_up_appBar">


        <TextView
            android:id="@+id/wlc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/advent_pro_semibold"
            android:text="@string/sign_up_welcome_text"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:transitionName="welcome_text"
            />

        <TextView
            android:id="@+id/logo_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/antic"
            android:text="@string/sign_up_encourage_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:transitionName="logo_text"
            android:layout_below="@id/wlc_txt"/>

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/logo_txt">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_full_name"
                android:hint="@string/full_name_text"
                app:boxStrokeColor="@color/deep_sky_blue"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_email"
                android:hint="@string/email_text"
                app:boxStrokeColor="@color/deep_sky_blue"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_phone"
                android:hint="@string/phone_number_text"
                app:boxStrokeColor="@color/deep_sky_blue"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="11" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_password"
                android:hint="@string/password_text"
                app:boxStrokeColor="@color/deep_sky_blue"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_text"
                app:boxStrokeColor="@color/deep_sky_blue"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_text"
                android:id="@+id/signup_btn"
                android:transitionName="user_btn"
                app:iconGravity="textStart"
                android:textColor="@color/ghost_white"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.Button"
                app:cornerRadius="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:elevation="2dp"
                android:fontFamily="@font/antic"
                android:text="@string/have_account_already_text"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_below="@id/signup_btn"/>
        </LinearLayout>
</RelativeLayout>