<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/purple_200"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:id="@+id/ImgSpazaLogo"
                android:contentDescription="@string/shop_icon"
                android:src="@mipmap/logo_food"
                app:layout_collapseMode="parallax"
				android:adjustViewBounds="true"
                app:layout_collapseParallaxMultiplier="0.7" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nestedScrollView1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
        <LinearLayout
            android:orientation="vertical"
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:id="@+id/linearLayout1"
        >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
            >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/InputBusinessName"
                    android:hint="@string/input_name"
                />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
            >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:id="@+id/InputBusinessPhone"
                    android:phoneNumber="true"
                    android:hint="@string/input_phone_number"
                />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
            >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/InputBusinessDescription"
                    android:hint="@string/input_description"
                    
                />

            </com.google.android.material.textfield.TextInputLayout>
            
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_monday_friday"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
            >
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:id="@+id/InputBusinessMFOpen"
                    android:text="@string/text_open"
                    android:focusable="false"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                />
                 <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:id="@+id/InputBusinessMFClose"
                    android:text="@string/text_close"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                />   


            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_saterday"
                android:layout_margin="10dp"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
            >
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:id="@+id/InputBusinessSatOpen"
                    android:text="@string/text_open"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                />

                 <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:id="@+id/InputBusinessSatClose"
                    android:text="@string/text_close"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                />

            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sunday"
                android:layout_margin="10dp"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
            >
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:id="@+id/InputBusinessSunOpen"
                    android:text="@string/text_open"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:id="@+id/InputBusinessSunClose"
                    android:text="@string/text_close"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                />
                
                

            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/InputBusinessAddress"
                android:text="@string/text_address"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
            />
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:text="@string/text_update"
                android:id="@+id/BtnUpdateProfile"
            />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pressedTranslationZ="12dp"
        android:layout_marginEnd="10dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|end|right"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>